syncing new repositary

--- a/unit_1/index.html
+++ b/unit_1/index.html
@@ -1,5 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>
+<title>SuperOwls</title>
+	<link rel="stylesheet" type="text/css" href="css/style.css">
+</head>
 <body>
+	<h1>SuperOwls</h1>
+	<p>This is the secret headquarters of SuperOwls</p>
+</body>
+</html>
